v4.9.0/_sources/generated/pcdsdevices.pmps.TwinCATStatePMPS.rst.txt
pcdsdevices.pmps.TwinCATStatePMPS
=================================

.. currentmodule:: pcdsdevices.pmps

.. autoclass:: TwinCATStatePMPS

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - state
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:GET_RBV``
          - Setpoint and readback for TwinCAT state position.
          - hinted
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - error
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ERR``
          - True if we have an error.
          - normal
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - error_id
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ERRID``
          - Error code.
          - normal
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - error_message
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ERRMSG``
          - Error message
          - normal
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - busy
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:BUSY``
          - True if we have an ongoing move.
          - normal
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - done
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:DONE``
          - True if we completed the last move.
          - normal
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - reset_cmd
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RESET``
          - Command to reset an error.
          - normal
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - config
          - :class:`~pcdsdevices.state.TwinCATStateConfigAll`
          - 
          - Configuration of state positions, deltas, etc.
          - omitted
          - Inherited from :class:`~pcdsdevices.inout.TwinCATInOutPositioner`
    
        * - arb_enable
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:PMPS:ARB:ENABLE``
          - Enables PMPS pre-emptive protections. This can be disabled to fall back on fast-fault-only protections. Disabling this will also clear arbiter requests.
          - config
          - 
    
        * - maint_mode
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:PMPS:MAINT``
          - If this is on, we trip a fast fault and then can move the motor freely. Useful for debugging motion issues.
          - config
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_inserted
    .. automethod:: check_removed
    .. automethod:: check_transmission
    .. automethod:: clear_error
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_state
    .. automethod:: insert
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: set
    .. automethod:: status
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: in_states
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: out_states
    .. autoattribute:: position
    .. autoattribute:: settle_time
    .. autoattribute:: states_list
    .. autoattribute:: stop
    .. autoattribute:: timeout
    .. autoattribute:: transmission
    
    